--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 <script>
     // 💡 ĐẢM BẢO CHUỖI KẾT NỐI MONGODB CỦA BẠN LÀ CHÍNH XÁC
     // Thay thế bằng URL thực tế nếu bạn đã triển khai server (ví dụ: http://localhost:3000/api)
-    const serverUrl = 'https://quiz-to21.onrender.com'; 
+   const serverUrl = window.location.origin;
     let currentUserId = null;
     let currentUserRole = null;
     
