--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@ const SUBJECT_NAMES = {
   it: "Tin học"
 };
 
-    const serverUrl = 'https://quiz-to21.onrender.com';
+     const serverUrl = window.location.origin;
 
     function showTab(tabId, element) {
       document.querySelectorAll('.tab-button').forEach(btn => btn.classList.remove('active'));
