--- a/index.html
+++ b/index.html
@@ -415,9 +415,11 @@ color: #dc3545; / đỏ chuẩn /
     </select>
     <label for="q-level">Khối</label>
     <select id="q-level" onchange="renderQuestions()"> <option value="">Tất cả</option>
-      <option value="1">1</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
+      option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+		<option value="4">4</option>
+		<option value="5">5</option>
     </select>
     
     <button class="btn" onclick="renderQuestions()" style="display:none;">Lọc</button> 
@@ -460,9 +462,11 @@ color: #dc3545; / đỏ chuẩn /
     <div class="form-group">
       <label>Khối:</label>
       <select id="edit-q-level">
-        <option value="10">10</option>
-        <option value="11">11</option>
-        <option value="12">12</option>
+        option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+		<option value="4">4</option>
+		<option value="5">5</option>
       </select>
     </div>
 <div class="form-group">
@@ -535,9 +539,11 @@ color: #dc3545; / đỏ chuẩn /
         <div class="form-group">
           <label for="q-level-new">Khối:</label>
           <select id="q-level-new">
-            <option value="10">10</option>
-            <option value="11">11</option>
-            <option value="12">12</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+			<option value="4">4</option>
+			<option value="5">5</option>
           </select>
         </div>
         
@@ -609,9 +615,11 @@ color: #dc3545; / đỏ chuẩn /
     <div class="form-group">
       <label for="auto-test-level">Khối:</label>
       <select id="auto-test-level">
-        <option value="10">10</option>
-        <option value="11">11</option>
-        <option value="12">12</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+		<option value="4">4</option>
+		<option value="5">5</option>
       </select>
     </div>
     <div class="form-group">
@@ -651,9 +659,11 @@ color: #dc3545; / đỏ chuẩn /
       </select>
       <label for="manual-test-level">Khối:</label>
       <select id="manual-test-level" onchange="filterQuestionsForManualTest()">
-        <option value="10">10</option>
-        <option value="11">11</option>
-        <option value="12">12</option>
+        option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+		<option value="4">4</option>
+		<option value="5">5</option>
       </select>
       <button class="btn" onclick="filterQuestionsForManualTest()" style="display: none;">Lọc câu hỏi</button>
     </div>
@@ -692,9 +702,11 @@ color: #dc3545; / đỏ chuẩn /
     <label for="test-filter-level" style="margin-left: 15px;">Lọc theo Khối:</label>
     <select id="test-filter-level" onchange="renderTests()">
         <option value="">-- Tất cả Khối --</option>
-        <option value="10">10</option>
-        <option value="11">11</option>
-        <option value="12">12</option>
+        option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+		<option value="4">4</option>
+		<option value="5">5</option>
     </select>
 </div>
 
@@ -753,9 +765,11 @@ color: #dc3545; / đỏ chuẩn /
 <div class="form-group">
       <label>Khối:</label>
       <select id="edit-test-level">
-        <option value="10">10</option>
-        <option value="11">11</option>
-        <option value="12">12</option>
+        option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+		<option value="4">4</option>
+		<option value="5">5</option>>
       </select>
     </div>
 
