--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@ color: #dc3545; / đỏ chuẩn /
     </select>
     <label for="q-level">Khối</label>
     <select id="q-level" onchange="renderQuestions()"> <option value="">Tất cả</option>
-      option value="1">1</option>
+        <option value="1">1</option>
         <option value="2">2</option>
         <option value="3">3</option>
 		<option value="4">4</option>
@@ -462,7 +462,7 @@ color: #dc3545; / đỏ chuẩn /
     <div class="form-group">
       <label>Khối:</label>
       <select id="edit-q-level">
-        option value="1">1</option>
+        <option value="1">1</option>
         <option value="2">2</option>
         <option value="3">3</option>
 		<option value="4">4</option>
@@ -659,7 +659,7 @@ color: #dc3545; / đỏ chuẩn /
       </select>
       <label for="manual-test-level">Khối:</label>
       <select id="manual-test-level" onchange="filterQuestionsForManualTest()">
-        option value="1">1</option>
+        <option value="1">1</option>
         <option value="2">2</option>
         <option value="3">3</option>
 		<option value="4">4</option>
@@ -702,7 +702,7 @@ color: #dc3545; / đỏ chuẩn /
     <label for="test-filter-level" style="margin-left: 15px;">Lọc theo Khối:</label>
     <select id="test-filter-level" onchange="renderTests()">
         <option value="">-- Tất cả Khối --</option>
-        option value="1">1</option>
+        <option value="1">1</option>
         <option value="2">2</option>
         <option value="3">3</option>
 		<option value="4">4</option>
@@ -765,7 +765,7 @@ color: #dc3545; / đỏ chuẩn /
 <div class="form-group">
       <label>Khối:</label>
       <select id="edit-test-level">
-        option value="1">1</option>
+        <option value="1">1</option>
         <option value="2">2</option>
         <option value="3">3</option>
 		<option value="4">4</option>
