--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@ function addQuestionOption(text = '', isCorrect = false) {
 }
 
     // Configuration
-    const serverUrl = 'https://quiz-to21.onrender.com';
+    const serverUrl = window.location.origin;
     const PAGE_SIZE = 20;
     let currentUser = null;
 	
